--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.word {
+  color: green;
+  font-weight: bold;
+}
+
 .box {
   width: 100px;
   height: 100px;
@@ -6,6 +15,14 @@
   text-align: center;
   line-height: 100px;
   color: white;
+}
+
+.code > div {
+  display: inline-block;
+  width: 33%;
+  outline: 1px solid #000;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .red {
